# gcamp-ros2-seminar

./: README.md  checklist.txt  notepad
MaRo/: csi.py  csi_todo.txt  log.txt
MaRo/csi_camera/: package.xml  setup.cfg  setup.py
MaRo/demo_pkg/: CMakeLists.txt  package.xml
MaRo/maro_demo/: package.xml  setup.cfg  setup.py
MaRo/myahrs_ros2_driver/: .travis.yml  CONTRIBUTING.md  README.md
MaRo/myahrs_ros2_driver/myahrs_ros2_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
MaRo/myahrs_ros2_driver/myahrs_ros2_driver/config/: config.yaml
MaRo/myahrs_ros2_driver/myahrs_ros2_driver/include/myahrs_ros2_driver/: myahrs_plus.hpp  myahrs_ros2_driver.hpp
MaRo/myahrs_ros2_driver/myahrs_ros2_driver/launch/: myahrs_ros2_driver.launch.py
MaRo/myahrs_ros2_driver/myahrs_ros2_driver/rviz/: imu_test.rviz
MaRo/myahrs_ros2_driver/myahrs_ros2_driver/src/: main.cpp  myahrs_ros2_driver.cpp
MaRo/rccontrol_bringup/: package.xml  setup.cfg  setup.py
MaRo/rccontrol_msgs/: CMakeLists.txt  package.xml
MaRo/rf2o_laser_odometry/: CMakeLists.txt  README.md  package.xml
MaRo/rplidar_ros2/: CMakeLists.txt  README.md  compile_colcon.sh  package.xml  run_client.sh  run_rplidar.sh  run_rviz.sh  run_tf.sh
Setup/: ai_demo_setup.sh  log.txt  parts_install.sh  ros2_setup.sh  trt_pose_setup_nano.sh  utils_setup.sh  vscode_install.sh
basic_service_pkg/: package.xml  setup.cfg  setup.py
basic_topic_pkg/: package.xml  setup.cfg  setup.py
rccontrol_bringup/: package.xml
rqt_rc_steering/: package.xml  plugin.xml
turtlesim_topic_pkg/: package.xml  setup.cfg  setup.py
(+101 files in other folders)
